--- a/indexx.html
+++ b/indexx.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/s1.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header secondary-background">
+    <header class="header secondary-background hide">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -21,7 +21,7 @@
 
             </ul>
         </nav>
-        <div class="banner">
+        <div class="banner ">
             <div class="banner-content">
                <h4 class="banner-greeting dark-2">Hi, i am</h4>
                <h1 class="banner title">Mary Hardy</h1>
@@ -36,7 +36,7 @@
 
     </header>
     <main>
-        <section class="about secondary-background">
+        <section class="about secondary-background hide">
         <h3 class="section-title">About Me</h3>
         <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our meta</p>
     <div class="about-items">
@@ -85,59 +85,79 @@
         </div>
        </div>
         </section>
-        <section class="resume">
-            <h3 class="section title">A summary of My Resume</h3>
+        <section class="resume ">
+            <h3 class="section-title">A summary of My Resume</h3>
              <div class="resume-container">
                 <div class="resume-column">
-                    <h3-resume-column-title>My Education</h3-resume-column-title>
+                    <h3 class="resume-column-title">My Education</h3>
                     <div class="experience">
-                        <h4-experience-title>Master in Computer Engineering</h4-experience-title>
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
                         <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
                         <experience-description>List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4-experience-title>Master in Computer Engineering</h4-experience-title>
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
                         <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
                         <experience-description>List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4-experience-title>Master in Computer Engineering</h4-experience-title>
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
                         <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
                         <experience-description>List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</experience-description>
                     </div>
                 </div>
                 <div class="resume-column">
-                    <h3-resume-column-title>My Experience</h3-resume-column-title>
+                    <h3 class="resume-column-title">My Experience</h3>
                     <div class="experience">
-                        <h4-experience-title>Sr. Font End Developer</h4-experience-title>
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
                         <h5 class="experience-sub-title">Apple Inc / 2020 - Curren</h5>
                         <experience-description>List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolo</experience-description>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4-experience-title>Sr. Font End Developer</h4-experience-title>
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
                         <h5 class="experience-sub-title">Apple Inc / 2020 - Curren</h5>
                         <experience-description>List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolo</experience-description>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4-experience-title>Sr. Font End Developer</h4-experience-title>
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
                         <h5 class="experience-sub-title">Apple Inc / 2020 - Curren</h5>
                         <experience-description>List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolo</experience-description>
                     </div>
                 </div>
              </div>
+             <div class="text-center resume-download-cv"><button class="btn-primary">Download CV</button>               </div>
+      
         </section>
     </main>
-    <footer>
+    <footer class="secondary-background">
+        <div class="footer-column">
+            <h3 class="footer-title">Lets Connect</h3>
+            <p class="footer details">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a> 
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-title">Lets Message me</h3>
+            <form action="">
+              <input type="text" name="" id="" placeholder="Your name">
+              <input type="email" name="" id="" placeholder="Your Email">
+             <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+             <input type="submit" value="Submit">
+            </form>
+        </div>
 
     </footer>
 </body>
