--- a/indexx.html
+++ b/indexx.html
@@ -154,8 +154,8 @@
             <form action="">
               <input type="text" name="" id="" placeholder="Your name">
               <input type="email" name="" id="" placeholder="Your Email">
-             <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-             <input type="submit" value="Submit">
+             <textarea name="" id="" cols="30" rows="20" placeholder="Message"></textarea>
+             <input class="btn-primary" type="submit" value="Submit">
             </form>
         </div>
 
