--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     </header>
     <main>
-        <section class="about secondary-background hide">
+        <section class="about secondary-background">
         <h3 class="section-title">About Me</h3>
         <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our meta</p>
     <div class="about-items">
@@ -59,7 +59,7 @@
         </div>   
     </div>
         </section>
-        <section class="skills">
+        <section class="skills ">
        <h3 class="section-title text-center">What I do</h3>
        <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
        <div class="skills-container">
